--- a/rouge/rouge.csproj
+++ b/rouge/rouge.csproj
@@ -25,6 +25,9 @@
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="src\Rouge\Console\Camera.ts" />
+    <TypeScriptCompile Include="src\Rouge\Console\GameScreen.ts" />
+    <TypeScriptCompile Include="src\Rouge\Console\MainMenuScreen.ts" />
     <TypeScriptCompile Include="src\Rouge\Constants.ts" />
     <TypeScriptCompile Include="src\Rouge\Controllers\Player.ts" />
     <TypeScriptCompile Include="src\Rouge\Entities\AttackResult.ts" />
@@ -39,7 +42,7 @@
     <TypeScriptCompile Include="src\Rouge\Controllers\EntityManager.ts" />
     <TypeScriptCompile Include="src\Rouge\Dungeon\Dungeon.ts" />
     <TypeScriptCompile Include="src\Rouge\Dungeon\Level.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\Foe.ts" />
+    <TypeScriptCompile Include="src\Rouge\Entities\Enemy.ts" />
     <TypeScriptCompile Include="src\Rouge\Entities\Stats.ts" />
     <TypeScriptCompile Include="phaser.d.ts" />
     <TypeScriptCompile Include="rot.d.ts" />
