--- a/rouge/rouge.csproj
+++ b/rouge/rouge.csproj
@@ -30,6 +30,7 @@
     <TypeScriptCompile Include="src\Rouge\Console\GameScreen.ts" />
     <TypeScriptCompile Include="src\Rouge\Console\GameUI.ts" />
     <TypeScriptCompile Include="src\Rouge\Console\MainMenuScreen.ts" />
+    <TypeScriptCompile Include="src\Rouge\Console\TextBox.ts" />
     <TypeScriptCompile Include="src\Rouge\Constants.ts" />
     <TypeScriptCompile Include="src\Rouge\Controllers\Path.ts" />
     <TypeScriptCompile Include="src\Rouge\Controllers\Player.ts" />
@@ -54,7 +55,7 @@
     <TypeScriptCompile Include="src\Rouge\Entities\PlayerChar.ts" />
     <TypeScriptCompile Include="src\Rouge\Objects\ArmorPiece.ts" />
     <TypeScriptCompile Include="src\Rouge\Objects\Consumable.ts" />
-    <TypeScriptCompile Include="src\Rouge\Objects\ItemObject.ts" />
+    <TypeScriptCompile Include="src\Rouge\Dungeon\ItemObject.ts" />
     <TypeScriptCompile Include="src\Rouge\Objects\Objects.ts" />
     <TypeScriptCompile Include="src\Rouge\Objects\Weapon.ts" />
     <TypeScriptCompile Include="src\Rouge\Rouge.ts" />
