--- a/rouge/rouge.csproj
+++ b/rouge/rouge.csproj
@@ -27,44 +27,44 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="parallel.d.ts" />
-    <TypeScriptCompile Include="src\Rouge\Console\Camera.ts" />
-    <TypeScriptCompile Include="src\Rouge\Console\Core\Control.ts" />
-    <TypeScriptCompile Include="src\Rouge\Console\DrawMatrix.ts" />
-    <TypeScriptCompile Include="src\Rouge\Console\GameScreen.ts" />
-    <TypeScriptCompile Include="src\Rouge\Console\GameUI.ts" />
-    <TypeScriptCompile Include="src\Rouge\Console\MainMenuScreen.ts" />
-    <TypeScriptCompile Include="src\Rouge\Console\TextBox.ts" />
-    <TypeScriptCompile Include="src\Rouge\Controllers\AstarPath.ts" />
-    <TypeScriptCompile Include="src\Rouge\Controllers\Path.ts" />
-    <TypeScriptCompile Include="src\Rouge\Controllers\Player.ts" />
-    <TypeScriptCompile Include="src\Rouge\Controllers\StraightPath.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\Attack.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\AttackResult.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\Entities.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\Equipment.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\Skill.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\Skillset.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\Trait.ts" />
-    <TypeScriptCompile Include="src\Rouge\Console\Console.ts" />
-    <TypeScriptCompile Include="src\Rouge\Console\Core\Game.ts" />
-    <TypeScriptCompile Include="src\Rouge\Controllers\ChangeProperty.ts" />
-    <TypeScriptCompile Include="src\Rouge\Controllers\Controllers.ts" />
-    <TypeScriptCompile Include="src\Rouge\Controllers\EntityManager.ts" />
-    <TypeScriptCompile Include="src\Rouge\Dungeon\Dungeon.ts" />
-    <TypeScriptCompile Include="src\Rouge\Dungeon\Level.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\Enemy.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\Statset.ts" />
+    <TypeScriptCompile Include="src\Console\Camera.ts" />
+    <TypeScriptCompile Include="src\Console\Core\Control.ts" />
+    <TypeScriptCompile Include="src\Console\DrawMatrix.ts" />
+    <TypeScriptCompile Include="src\Console\GameScreen.ts" />
+    <TypeScriptCompile Include="src\Console\GameUI.ts" />
+    <TypeScriptCompile Include="src\Console\MainMenuScreen.ts" />
+    <TypeScriptCompile Include="src\Console\TextBox.ts" />
+    <TypeScriptCompile Include="src\Controllers\AstarPath.ts" />
+    <TypeScriptCompile Include="src\Controllers\Path.ts" />
+    <TypeScriptCompile Include="src\Controllers\Player.ts" />
+    <TypeScriptCompile Include="src\Controllers\StraightPath.ts" />
+    <TypeScriptCompile Include="src\Entities\Attack.ts" />
+    <TypeScriptCompile Include="src\Entities\AttackResult.ts" />
+    <TypeScriptCompile Include="src\Entities\Entities.ts" />
+    <TypeScriptCompile Include="src\Entities\Equipment.ts" />
+    <TypeScriptCompile Include="src\Entities\Skill.ts" />
+    <TypeScriptCompile Include="src\Entities\Skillset.ts" />
+    <TypeScriptCompile Include="src\Entities\Trait.ts" />
+    <TypeScriptCompile Include="src\Console\Console.ts" />
+    <TypeScriptCompile Include="src\Console\Core\Game.ts" />
+    <TypeScriptCompile Include="src\Controllers\ChangeProperty.ts" />
+    <TypeScriptCompile Include="src\Controllers\Controllers.ts" />
+    <TypeScriptCompile Include="src\Controllers\EntityManager.ts" />
+    <TypeScriptCompile Include="src\Dungeon\Dungeon.ts" />
+    <TypeScriptCompile Include="src\Dungeon\Level.ts" />
+    <TypeScriptCompile Include="src\Entities\Enemy.ts" />
+    <TypeScriptCompile Include="src\Entities\Statset.ts" />
     <TypeScriptCompile Include="phaser.d.ts" />
     <TypeScriptCompile Include="rot.d.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\Entity.ts" />
-    <TypeScriptCompile Include="src\Rouge\Entities\PlayerChar.ts" />
-    <TypeScriptCompile Include="src\Rouge\Items\ArmorPiece.ts" />
-    <TypeScriptCompile Include="src\Rouge\Items\Consumable.ts" />
-    <TypeScriptCompile Include="src\Rouge\Dungeon\ItemObject.ts" />
-    <TypeScriptCompile Include="src\Rouge\Items\Items.ts" />
-    <TypeScriptCompile Include="src\Rouge\Items\Weapon.ts" />
-    <TypeScriptCompile Include="src\Rouge\Rouge.ts" />
-    <TypeScriptCompile Include="src\Rouge\ObservableProperty.ts" />
+    <TypeScriptCompile Include="src\Entities\Entity.ts" />
+    <TypeScriptCompile Include="src\Entities\PlayerChar.ts" />
+    <TypeScriptCompile Include="src\Items\ArmorPiece.ts" />
+    <TypeScriptCompile Include="src\Items\Consumable.ts" />
+    <TypeScriptCompile Include="src\Dungeon\ItemObject.ts" />
+    <TypeScriptCompile Include="src\Items\Items.ts" />
+    <TypeScriptCompile Include="src\Items\Weapon.ts" />
+    <TypeScriptCompile Include="src\Rouge.ts" />
+    <TypeScriptCompile Include="src\ObservableProperty.ts" />
   </ItemGroup>
   <ItemGroup>
     <None Include="web.Debug.config">
@@ -75,7 +75,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="src\Rouge\GUI\" />
+    <Folder Include="src\GUI\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
