Entities have a direction, currently indicated by a color change in front of them.

--- a/rouge/rouge.csproj
+++ b/rouge/rouge.csproj
@@ -79,6 +79,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="src\ConsoleGame\UI\" />
     <Folder Include="src\GUIGame\" />
   </ItemGroup>
   <PropertyGroup>
