All interface buttons are now using the new format and working!

--- a/rouge/sheol.csproj
+++ b/rouge/sheol.csproj
@@ -51,7 +51,7 @@
     <TypeScriptCompile Include="src\Common\Entities\Skill.ts" />
     <TypeScriptCompile Include="src\Common\Entities\Skillset.ts" />
     <TypeScriptCompile Include="src\Common\Entities\Trait.ts" />
-    <TypeScriptCompile Include="src\AsciiGame\ConsoleGame.ts" />
+    <TypeScriptCompile Include="src\AsciiGame\AsciiGame.ts" />
     <TypeScriptCompile Include="src\AsciiGame\Core\Game.ts" />
     <TypeScriptCompile Include="src\Common\Controllers\ChangeProperty.ts" />
     <TypeScriptCompile Include="src\Common\Controllers\Controllers.ts" />
